...
    },
    "auth.sign_in_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome back"
          }
        }
      }
    },
    "auth.sign_out" : {
      "localizations" : {
...
    },
    "auth.sign_up" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign Up"
          }
        }
      }
    },
    "auth.sign_up_subtitle" : {
      "localizations" : {
...
    },
    "auth.sign_up_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Let's get started"
          }
        }
      }
    },
    "auth.switch_to_sign_in" : {
      "localizations" : {
...
    },
    "general.app_name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sevino"
          }
        }
      }
    },
    "general.back" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        }
      }
    },
    "general.connection_error_body" : {
      "localizations" : {
...
    },
    "welcome.log_in" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log In"
          }
        }
      }
    },
    "welcome.page1_subtitle" : {
      "localizations" : {
...
